// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a 1`] = `
<a
  className="sc-kpOJdX gGrmAf"
/>
`;

exports[`should render abbr 1`] = `
<abbr
  className="sc-eHgmQL iAqEqW"
/>
`;

exports[`should render article 1`] = `
<article
  className="sc-iwsKbI bhBXJV"
/>
`;

exports[`should render aside 1`] = `
<aside
  className="sc-gZMcBi cxSIDt"
/>
`;

exports[`should render audio 1`] = `
<audio
  className="sc-jnlKLf kDfuuM"
/>
`;

exports[`should render blockquote 1`] = `
<blockquote
  className="sc-gqjmRU fUYoYW"
/>
`;

exports[`should render box 1`] = `
<div
  className="sc-ifAKCX lpsDJO"
/>
`;

exports[`should render button 1`] = `
<button
  className="sc-fMiknA bhacOa"
/>
`;

exports[`should render caption 1`] = `
<caption
  className="sc-uJMKN ktppFx"
/>
`;

exports[`should render cite 1`] = `
<cite
  className="sc-jWBwVP iKyWVx"
/>
`;

exports[`should render code 1`] = `
<code
  className="sc-gPEVay hOyEWJ"
/>
`;

exports[`should render col 1`] = `
<col
  className="sc-jqCOkK fdRDum"
/>
`;

exports[`should render colgroup 1`] = `
<colgroup
  className="sc-dNLxif joZuwv"
/>
`;

exports[`should render data 1`] = `
<data
  className="sc-cMljjf fHSTkF"
/>
`;

exports[`should render dd 1`] = `
<dd
  className="sc-jhAzac hIQGPi"
/>
`;

exports[`should render del 1`] = `
<del
  className="sc-iAyFgw iDliZa"
/>
`;

exports[`should render dfn 1`] = `
<dfn
  className="sc-brqgnP bLXlwV"
/>
`;

exports[`should render div 1`] = `
<div
  className="sc-EHOje irNgvr"
/>
`;

exports[`should render dl 1`] = `
<dl
  className="sc-bRBYWo hrVVXn"
/>
`;

exports[`should render dt 1`] = `
<dt
  className="sc-hzDkRC ixkZiN"
/>
`;

exports[`should render em 1`] = `
<em
  className="sc-ckVGcZ hpMFpH"
/>
`;

exports[`should render fieldset 1`] = `
<fieldset
  className="sc-caSCKo jpQxTE"
/>
`;

exports[`should render figcaption 1`] = `
<figcaption
  className="sc-jlyJG hJktQi"
/>
`;

exports[`should render figure 1`] = `
<figure
  className="sc-iRbamj fYebEt"
/>
`;

exports[`should render flex 1`] = `
<div
  className="sc-bxivhb gjBgWu"
/>
`;

exports[`should render footer 1`] = `
<footer
  className="sc-htoDjs jTRijE"
/>
`;

exports[`should render form 1`] = `
<form
  className="sc-fAjcbJ exEPba"
/>
`;

exports[`should render h1 1`] = `
<h1
  className="sc-jTzLTM gCioaR"
/>
`;

exports[`should render h2 1`] = `
<h2
  className="sc-fjdhpX jZmmpk"
/>
`;

exports[`should render h3 1`] = `
<h3
  className="sc-jzJRlG bKmiqH"
/>
`;

exports[`should render h4 1`] = `
<h4
  className="sc-cSHVUG bksCYH"
/>
`;

exports[`should render h5 1`] = `
<h5
  className="sc-kAzzGY iLLDxR"
/>
`;

exports[`should render h6 1`] = `
<h6
  className="sc-chPdSV cBVscX"
/>
`;

exports[`should render header 1`] = `
<header
  className="sc-bZQynM iUMAkH"
/>
`;

exports[`should render hgroup 1`] = `
<hgroup
  className="sc-VigVT dgHANu"
/>
`;

exports[`should render image 1`] = `
<img
  className="sc-gGBfsJ fYLDYo"
/>
`;

exports[`should render img 1`] = `
<img
  className="sc-bbmXgH dgyBhP"
/>
`;

exports[`should render input 1`] = `
<input
  className="sc-cHGsZl tMWEe"
/>
`;

exports[`should render inputsubmit 1`] = `
<input
  className="sc-eqIVtm jtIKRU"
/>
`;

exports[`should render label 1`] = `
<label
  className="sc-kjoXOD gXGHjA"
/>
`;

exports[`should render legend 1`] = `
<legend
  className="sc-gisBJw dSKIAB"
/>
`;

exports[`should render li 1`] = `
<li
  className="sc-Rmtcm gSfIOn"
/>
`;

exports[`should render linkbutton 1`] = `
<a
  className="sc-dVhcbM btMvqS"
/>
`;

exports[`should render main 1`] = `
<main
  className="sc-gzVnrw gUSCiV"
/>
`;

exports[`should render mark 1`] = `
<mark
  className="sc-hSdWYo jaBeGT"
/>
`;

exports[`should render nav 1`] = `
<nav
  className="sc-fBuWsC hmQUhu"
/>
`;

exports[`should render ol 1`] = `
<ol
  className="sc-csuQGl fhftlJ"
/>
`;

exports[`should render option 1`] = `null`;

exports[`should render p 1`] = `
<p
  className="sc-kGXeez cKNkvN"
/>
`;

exports[`should render pre 1`] = `
<pre
  className="sc-jDwBTQ lfYemo"
/>
`;

exports[`should render q 1`] = `
<q
  className="sc-cvbbAY jfpavh"
/>
`;

exports[`should render section 1`] = `
<section
  className="sc-dnqmqq bTTEXy"
/>
`;

exports[`should render select 1`] = `
<select
  className="sc-TOsTZ iRiIOr"
/>
`;

exports[`should render small 1`] = `
<small
  className="sc-eNQAEJ jhRIhH"
/>
`;

exports[`should render span 1`] = `
<span
  className="sc-dxgOiQ eSApoT"
/>
`;

exports[`should render strong 1`] = `
<strong
  className="sc-jKJlTe lbGbdU"
/>
`;

exports[`should render sub 1`] = `
<sub
  className="sc-hMqMXs byssTT"
/>
`;

exports[`should render sup 1`] = `
<sup
  className="sc-kEYyzF fCfOxI"
/>
`;

exports[`should render table 1`] = `
<table
  className="sc-cJSrbW kOUcGi"
/>
`;

exports[`should render tbody 1`] = `
<tbody
  className="sc-ksYbfQ jdBZvk"
/>
`;

exports[`should render td 1`] = `
<td
  className="sc-hqyNC gjuiQB"
/>
`;

exports[`should render text 1`] = `
<p
  className="sc-kgoBCf jgzabz"
/>
`;

exports[`should render textarea 1`] = `
<textarea
  className="sc-kgAjT dtTRXu"
/>
`;

exports[`should render tfoot 1`] = `
<tfoot
  className="sc-jbKcbu jGZIQT"
/>
`;

exports[`should render th 1`] = `
<th
  className="sc-frDJqD bmcqad"
/>
`;

exports[`should render thead 1`] = `
<thead
  className="sc-hmzhuo hPHaFg"
/>
`;

exports[`should render time 1`] = `
<time
  className="sc-jAaTju cSSvDY"
/>
`;

exports[`should render tr 1`] = `
<tr
  className="sc-kvZOFW gggWCh"
/>
`;

exports[`should render u 1`] = `
<u
  className="sc-kkGfuU dceAlh"
/>
`;

exports[`should render ul 1`] = `
<ul
  className="sc-gipzik fnyWMO"
/>
`;

exports[`should render video 1`] = `
<video
  className="sc-fYxtnH blyRBK"
/>
`;
